--- a/src/view/Entrevistas.html
+++ b/src/view/Entrevistas.html
@@ -195,11 +195,11 @@
                         })
                             .then((response) => response.json())
                             .then((data) => {
-                                alert(`Se actualizó correctamente la vacante con id ${id}.`);
+                                alert(`Se actualizó correctamente la entrevista con id ${id}.`);
                                 obtenerTotalDatos();
                             })
                             .catch((error) => {
-                                alert('Ha ocurrido un error al actualizar la vacante.');
+                                alert('Ha ocurrido un error al actualizar la entrevista.');
                             });
                     }
                 };
